--- a/docs/posts/03wk-2.out.ipynb
+++ b/docs/posts/03wk-2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "673c80ce-06ce-49af-8f75-d927b70f221e"
+      "id": "154e8726-23b7-4372-9794-9495ad7daad7"
     },
     {
       "cell_type": "code",
@@ -44,7 +44,7 @@
         "\n",
         "`-` 아래와 같은 벡터 ${\\boldsymbol x}$를 가정하자."
       ],
-      "id": "80beb20b-b0c6-4f6b-9488-cc2a3876d966"
+      "id": "12c89a4c-eef5-46db-a628-67c75669d480"
     },
     {
       "cell_type": "code",
@@ -69,7 +69,7 @@
         "\n",
         "## A. 방법1"
       ],
-      "id": "1cac7446-51f5-4f89-a905-2bff4d38496d"
+      "id": "5b52cf79-8a36-474b-87ea-6fe5901d11a7"
     },
     {
       "cell_type": "code",
@@ -140,7 +140,7 @@
         "\n",
         "## B. 방법2 – 렐루이용"
       ],
-      "id": "965c16f2-fbf7-4294-8fcd-2502c2430bb2"
+      "id": "7d46db83-4c6e-407b-80be-ae6ef62808f6"
     },
     {
       "cell_type": "code",
@@ -227,7 +227,7 @@
       "source": [
         "`-` 우리의 목표: 저 초록선에서 시그모이드를 태우면된다. 즉 아래의 느낌임"
       ],
-      "id": "665b98d5-6d11-4abe-b9cd-b3cf1581679c"
+      "id": "cf608e54-011f-4777-8a23-85781e081bb5"
     },
     {
       "cell_type": "code",
@@ -291,7 +291,7 @@
         "\n",
         "`-` 1단계"
       ],
-      "id": "65e93673-b7ef-4108-8f25-164b4b448dd7"
+      "id": "4fd01af6-ddc8-4369-a58a-b45de70bdf0a"
     },
     {
       "cell_type": "code",
@@ -311,7 +311,7 @@
       "source": [
         "`-` 2단계"
       ],
-      "id": "e8d2d93f-12b3-41a9-b82f-96cb5fec79f9"
+      "id": "a4e21bdd-bb64-4a22-88cb-8ce0d08cf34c"
     },
     {
       "cell_type": "code",
@@ -332,7 +332,7 @@
       "source": [
         "`-` 3단계"
       ],
-      "id": "52f3e8ee-b790-44b9-857e-bd6969cc47ab"
+      "id": "020eb9eb-1185-4049-aedb-eaae5b95dc1b"
     },
     {
       "cell_type": "code",
@@ -353,7 +353,7 @@
       "source": [
         "`-` 4단계"
       ],
-      "id": "fc2a7631-8111-4ef6-8c70-8de3a0ef7a5e"
+      "id": "686d2f04-90c6-45b6-8e4b-f89a9e7ac01a"
     },
     {
       "cell_type": "code",
@@ -385,11 +385,22 @@
       "source": [
         "`-` 그런데, 4단계는 아래와 같이 볼 수 있다.\n",
         "\n",
-        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} v_{11} & v_{12} \\\\ v_{21} & v_{22} \\\\ \\dots & \\dots \\\\ v_{n1} & v_{n2} \\\\ \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} -4.5 v_{11} - 9.0 v_{12} + 4.5 \\\\ -4.5 v_{21} - 9.0 v_{22} + 4.5 \\\\ \\dots \\\\ -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\ \\end{bmatrix}$\n",
+        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix}\n",
+        "    v_{11} & v_{12}  \\\\\n",
+        "    v_{21} & v_{22}  \\\\\n",
+        "    \\dots & \\dots  \\\\\n",
+        "    v_{n1} & v_{n2}  \\\\\n",
+        "    \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 =\n",
+        "    \\begin{bmatrix}\n",
+        "    -4.5 v_{11} - 9.0 v_{12} + 4.5  \\\\\n",
+        "    -4.5 v_{21} - 9.0 v_{22} + 4.5  \\\\\n",
+        "    \\dots \\\\\n",
+        "    -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\\n",
+        "    \\end{bmatrix}$\n",
         "\n",
         "위의 수식을 참고하여 매트릭스의 곱 형태로 다시 포현하면 아래와 같다."
       ],
-      "id": "52e8a945-f8de-4ae4-ac5b-13a9c44bceed"
+      "id": "ccf65c42-c709-482f-aa07-7461d6e7c07c"
     },
     {
       "cell_type": "code",
@@ -412,7 +423,7 @@
         "이제 매트릭스의 곱 대신에 `torch.nn.Linear()`를 이용하면 아래의 코드와\n",
         "같아진다."
       ],
-      "id": "3b074512-5730-4b63-86a0-8cc0ca36cff6"
+      "id": "6ad0bf34-ff0f-4cd3-96fc-0edb254e1495"
     },
     {
       "cell_type": "code",
@@ -467,7 +478,7 @@
         "x_n \n",
         "\\end{bmatrix}\\begin{bmatrix} 1 & -1 \\end{bmatrix} = \\begin{bmatrix} x_1 & -x_1 \\\\ x_2 & -x_2 \\\\ \\dots & \\dots \\\\ x_n & -x_n \\end{bmatrix}$$"
       ],
-      "id": "5f71348f-832f-4ad8-bedc-cd8e76991866"
+      "id": "b3ebf5d6-11ef-4e8f-a5e9-81b6acd23116"
     },
     {
       "cell_type": "code",
@@ -514,7 +525,7 @@
         "`-` 따라서 `torch.nn` 에 포함된 레이어를 이용하면 아래와 같이 표현할 할\n",
         "수 있다."
       ],
-      "id": "b36eb426-f374-481c-ae12-b95c11e9a162"
+      "id": "e498dddd-088d-430c-b73f-7723013ab147"
     },
     {
       "cell_type": "code",
@@ -553,7 +564,7 @@
         "`-` 각각의 layer를 `torch.nn.Sequential()` 로 묶으면 아래와 같이 정리할\n",
         "수 있다."
       ],
-      "id": "12cab9db-59a6-4596-82a0-2e51d4b0ec18"
+      "id": "685e9076-e302-4c57-babf-8009664e9918"
     },
     {
       "cell_type": "code",
@@ -622,7 +633,7 @@
         "\n",
         "## A. 데이터"
       ],
-      "id": "fb7278a0-66f3-4207-9dee-1be66ade790e"
+      "id": "11e76fff-b1c6-4861-8c59-135c8810a2b1"
     },
     {
       "cell_type": "code",
@@ -687,7 +698,7 @@
         "\n",
         "`-` Step2,3,4 는 너무 뻔해서.."
       ],
-      "id": "823d6ced-9ffa-42cf-b6c7-94f61f7cdce7"
+      "id": "73991e95-8864-46a3-aa7d-14696d098221"
     },
     {
       "cell_type": "code",
