--- a/docs/posts/10wk-2.out.ipynb
+++ b/docs/posts/10wk-2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "3e331e36-3bd1-4380-9d02-c95d2fe0a009"
+      "id": "12635b54-93fd-4b8a-b7eb-d37070a4324c"
     },
     {
       "cell_type": "code",
@@ -41,7 +41,7 @@
         "\n",
         "`-` 주어진 자료가 아래와 같다고 하자."
       ],
-      "id": "f1109838-a04b-46f5-8ba3-06ef5b2292b7"
+      "id": "4a2259b7-338f-4f60-a77a-812b18e8b14c"
     },
     {
       "cell_type": "code",
@@ -87,7 +87,7 @@
       "source": [
         "`-` 문제1: 아래와 같이 최초의 직선을 생성하였다."
       ],
-      "id": "55473488-c3c8-47f9-b9ca-87ca798e572a"
+      "id": "8f10ddeb-c379-4ed7-b79f-2effd57fe9ab"
     },
     {
       "cell_type": "code",
@@ -129,7 +129,7 @@
         "`torch.optim.SGD`를 이용하여 What을 update하라. 학습률은 0.1로 설정하고\n",
         "30회 update하라."
       ],
-      "id": "127e6464-5011-4441-a4b3-141eaaf67f7f"
+      "id": "d1e19409-6bda-4fcd-9cba-0569b0d4cc37"
     },
     {
       "cell_type": "code",
@@ -183,7 +183,7 @@
       "source": [
         "`-` 문제2: 아래와 같이 최초의 직선을 생성하였다."
       ],
-      "id": "dd98df77-4de6-4f1d-b4fa-ef7d2603b453"
+      "id": "f5d9cab5-766e-4030-bac6-58a21e2b109a"
     },
     {
       "cell_type": "code",
@@ -226,7 +226,7 @@
         "`torch.optim.SGD`를 이용하여 What을 update하라. 학습률은 0.1로 설정하고\n",
         "30회 update하라."
       ],
-      "id": "33433ac9-b8b9-4f45-bf69-a13623a876bd"
+      "id": "1e3f2808-6260-4a92-93bf-4fbda8576719"
     },
     {
       "cell_type": "code",
@@ -286,7 +286,7 @@
         "\n",
         "`-` Data"
       ],
-      "id": "bef32308-6957-4996-94cc-09f6c2787c95"
+      "id": "26e9714d-bd7e-4125-b075-faf854461dd0"
     },
     {
       "cell_type": "code",
@@ -339,7 +339,7 @@
         "옥순의I성향$\\times$영식의I성향 $+$ 옥순의N성향$\\times$영식의N성향 $+$\n",
         "옥순의매력 $+$ 영식의매력"
       ],
-      "id": "3e95d903-dbc1-4f6d-9547-c93620328f91"
+      "id": "fcbb9778-20ef-40eb-80fd-b39a981295b3"
     },
     {
       "cell_type": "code",
@@ -365,7 +365,7 @@
         "**(2)** 영자(IN)와 다호(ES)의 궁합 $\\approx$ 영자I성향$\\times$다호I성향\n",
         "$+$ 영자N성향$\\times$다호의N성향 $+$ 영자의매력 $+$ 다호의매력"
       ],
-      "id": "9f588d9b-4d57-4826-bbb7-f71385bdd7f3"
+      "id": "1032995d-4a5d-40e1-a6a4-c648e683dd74"
     },
     {
       "cell_type": "code",
@@ -391,7 +391,7 @@
         "**(3)** 하니(I)와 영호(IS)의 궁합 $\\approx$ 하니I성향$\\times$영호I성향\n",
         "$+$ 하니N성향$\\times$영호의N성향 $+$ 하니의매력 $+$ 영호의매력"
       ],
-      "id": "8434baa1-8031-413e-943c-6856235cad69"
+      "id": "9fb111fb-b338-481a-b51a-8ab400814ffd"
     },
     {
       "cell_type": "code",
@@ -418,7 +418,7 @@
         "\n",
         "`-` 전체 사용자의 설정값"
       ],
-      "id": "e567a3bd-2d31-4018-ab7d-5aa3b075296e"
+      "id": "4a3e833c-bdda-40cb-886b-a5200459bad3"
     },
     {
       "cell_type": "code",
@@ -471,7 +471,7 @@
       "source": [
         "`-` 아래의 행렬곱 관찰"
       ],
-      "id": "c2a9bf0f-dc5a-4824-a814-767feab53d7b"
+      "id": "bdb969ef-f9f6-46b2-9c51-df31fdbad874"
     },
     {
       "cell_type": "code",
@@ -491,15 +491,71 @@
       "source": [
         "—저거 따져보자—\n",
         "\n",
-        "${\\bf W} = \\begin{bmatrix} 1.2200 & 0.4900 \\\\ 1.1700 & 0.4400 \\\\ 1.2100 & -0.4500 \\\\ 1.2000 & -0.5000 \\\\ -1.2000 & 0.5100 \\\\ -1.2300 & 0.4800 \\\\ -1.2000 & -0.4800 \\\\ -1.1900 & -0.4900 \\\\ 0.2000 & 0.0000 \\end{bmatrix}$\n",
+        "${\\bf W} = \\begin{bmatrix}\n",
+        "1.2200 & 0.4900 \\\\\n",
+        "1.1700 & 0.4400 \\\\\n",
+        "1.2100 & -0.4500 \\\\\n",
+        "1.2000 & -0.5000 \\\\\n",
+        "-1.2000 & 0.5100 \\\\\n",
+        "-1.2300 & 0.4800 \\\\\n",
+        "-1.2000 & -0.4800 \\\\\n",
+        "-1.1900 & -0.4900 \\\\\n",
+        "0.2000 & 0.0000\n",
+        "\\end{bmatrix}$\n",
         "\n",
-        "${\\bf M}^\\top = \\begin{bmatrix} 1.2000 & 1.2200 & 1.2300 & 1.2100 & -1.2800 & -1.2400 & -1.2000 & -1.2200 \\\\ 0.5000 & 0.4500 & -0.7000 & -0.6000 & 0.6000 & 0.5000 & -0.5000 & -0.6000 \\end{bmatrix}$\n",
+        "${\\bf M}^\\top = \\begin{bmatrix}\n",
+        "1.2000 & 1.2200 & 1.2300 & 1.2100 & -1.2800 & -1.2400 & -1.2000 & -1.2200 \\\\\n",
+        "0.5000 & 0.4500 & -0.7000 & -0.6000 & 0.6000 & 0.5000 & -0.5000 & -0.6000\n",
+        "\\end{bmatrix}$\n",
         "\n",
-        "${\\bf W} @ {\\bf M}^\\top = \\begin{bmatrix} 1.7090 & 1.7089 & 1.1576 & 1.1822 & -1.2676 & -1.2678 & -1.7090 & -1.7824 \\\\ 1.6240 & 1.6254 & 1.1311 & 1.1517 & -1.2336 & -1.2308 & -1.6240 & -1.6914 \\\\ 1.2270 & 1.2737 & 1.8033 & 1.7341 & -1.8188 & -1.7254 & -1.2270 & -1.2062 \\\\ 1.1900 & 1.2390 & 1.8260 & 1.7520 & -1.8360 & -1.7380 & -1.1900 & -1.1640 \\\\ -1.1850 & -1.2345 & -1.8330 & -1.7580 & 1.8420 & 1.7430 & 1.1850 & 1.1580 \\\\ -1.2360 & -1.2846 & -1.8489 & -1.7763 & 1.8624 & 1.7652 & 1.2360 & 1.2126 \\\\ -1.6800 & -1.6800 & -1.1400 & -1.1640 & 1.2480 & 1.2480 & 1.6800 & 1.7520 \\\\ -1.6730 & -1.6723 & -1.1207 & -1.1459 & 1.2292 & 1.2306 & 1.6730 & 1.7458 \\\\ 0.2400 & 0.2440 & 0.2460 & 0.2420 & -0.2560 & -0.2480 & -0.2400 & -0.2440 \\end{bmatrix}$\n",
+        "${\\bf W} @ {\\bf M}^\\top = \\begin{bmatrix}\n",
+        "1.7090 & 1.7089 & 1.1576 & 1.1822 & -1.2676 & -1.2678 & -1.7090 & -1.7824 \\\\\n",
+        "1.6240 & 1.6254 & 1.1311 & 1.1517 & -1.2336 & -1.2308 & -1.6240 & -1.6914 \\\\\n",
+        "1.2270 & 1.2737 & 1.8033 & 1.7341 & -1.8188 & -1.7254 & -1.2270 & -1.2062 \\\\\n",
+        "1.1900 & 1.2390 & 1.8260 & 1.7520 & -1.8360 & -1.7380 & -1.1900 & -1.1640 \\\\\n",
+        "-1.1850 & -1.2345 & -1.8330 & -1.7580 &  1.8420 &  1.7430 &  1.1850 &  1.1580 \\\\\n",
+        "-1.2360 & -1.2846 & -1.8489 & -1.7763 &  1.8624 &  1.7652 &  1.2360 &  1.2126 \\\\\n",
+        "-1.6800 & -1.6800 & -1.1400 & -1.1640 &  1.2480 &  1.2480 &  1.6800 &  1.7520 \\\\\n",
+        "-1.6730 & -1.6723 & -1.1207 & -1.1459 &  1.2292 &  1.2306 &  1.6730 &  1.7458 \\\\\n",
+        "0.2400 &  0.2440 &  0.2460 &  0.2420 & -0.2560 & -0.2480 & -0.2400 & -0.2440\n",
+        "\\end{bmatrix}$\n",
         "\n",
-        "$\\begin{align*} bias =~& \\begin{bmatrix} 1.2100 \\\\ 1.2500 \\\\ 1.1000 \\\\ 1.1100 \\\\ 1.1200 \\\\ 1.1300 \\\\ 1.1400 \\\\ 1.1200 \\\\ 3.6000 \\end{bmatrix} +\\begin{bmatrix} 1.2000 & 1.1000 & 1.1100 & 1.2500 & 1.1800 & 1.1100 & 1.1500 & 1.1500 \\end{bmatrix}\\\\ \\\\ =~& \\begin{bmatrix} 2.4100 & 2.3100 & 2.3200 & 2.4600 & 2.3900 & 2.3200 & 2.3600 & 2.3600 \\\\ 2.4500 & 2.3500 & 2.3600 & 2.5000 & 2.4300 & 2.3600 & 2.4000 & 2.4000 \\\\ 2.3000 & 2.2000 & 2.2100 & 2.3500 & 2.2800 & 2.2100 & 2.2500 & 2.2500 \\\\ 2.3100 & 2.2100 & 2.2200 & 2.3600 & 2.2900 & 2.2200 & 2.2600 & 2.2600 \\\\ 2.3200 & 2.2200 & 2.2300 & 2.3700 & 2.3000 & 2.2300 & 2.2700 & 2.2700 \\\\ 2.3300 & 2.2300 & 2.2400 & 2.3800 & 2.3100 & 2.2400 & 2.2800 & 2.2800 \\\\ 2.3400 & 2.2400 & 2.2500 & 2.3900 & 2.3200 & 2.2500 & 2.2900 & 2.2900 \\\\ 2.3200 & 2.2200 & 2.2300 & 2.3700 & 2.3000 & 2.2300 & 2.2700 & 2.2700 \\\\ 4.8000 & 4.7000 & 4.7100 & 4.8500 & 4.7800 & 4.7100 & 4.7500 & 4.7500 \\end{bmatrix} \\end{align*}$\n",
+        "$\\begin{align*} bias =~& \\begin{bmatrix}\n",
+        "1.2100 \\\\\n",
+        "1.2500 \\\\\n",
+        "1.1000 \\\\\n",
+        "1.1100 \\\\\n",
+        "1.1200 \\\\\n",
+        "1.1300 \\\\\n",
+        "1.1400 \\\\\n",
+        "1.1200 \\\\\n",
+        "3.6000\n",
+        "\\end{bmatrix} +\\begin{bmatrix}\n",
+        "1.2000 & 1.1000 & 1.1100 & 1.2500 & 1.1800 & 1.1100 & 1.1500 & 1.1500\n",
+        "\\end{bmatrix}\\\\ \\\\\n",
+        "=~& \\begin{bmatrix}\n",
+        "2.4100 & 2.3100 & 2.3200 & 2.4600 & 2.3900 & 2.3200 & 2.3600 & 2.3600 \\\\\n",
+        "2.4500 & 2.3500 & 2.3600 & 2.5000 & 2.4300 & 2.3600 & 2.4000 & 2.4000 \\\\\n",
+        "2.3000 & 2.2000 & 2.2100 & 2.3500 & 2.2800 & 2.2100 & 2.2500 & 2.2500 \\\\\n",
+        "2.3100 & 2.2100 & 2.2200 & 2.3600 & 2.2900 & 2.2200 & 2.2600 & 2.2600 \\\\\n",
+        "2.3200 & 2.2200 & 2.2300 & 2.3700 & 2.3000 & 2.2300 & 2.2700 & 2.2700 \\\\\n",
+        "2.3300 & 2.2300 & 2.2400 & 2.3800 & 2.3100 & 2.2400 & 2.2800 & 2.2800 \\\\\n",
+        "2.3400 & 2.2400 & 2.2500 & 2.3900 & 2.3200 & 2.2500 & 2.2900 & 2.2900 \\\\\n",
+        "2.3200 & 2.2200 & 2.2300 & 2.3700 & 2.3000 & 2.2300 & 2.2700 & 2.2700 \\\\\n",
+        "4.8000 & 4.7000 & 4.7100 & 4.8500 & 4.7800 & 4.7100 & 4.7500 & 4.7500\n",
+        "\\end{bmatrix} \\end{align*}$\n",
         "\n",
-        "${\\bf W} @ {\\bf M}^\\top + bias = \\begin{bmatrix} 4.1190 & 4.0189 & 3.4776 & 3.6422 & 1.1224 & 1.0522 & 0.6510 & 0.5776 \\\\ 4.0740 & 3.9754 & 3.4911 & 3.6517 & 1.1964 & 1.1292 & 0.7760 & 0.7086 \\\\ 3.5270 & 3.4737 & 4.0133 & 4.0841 & 0.4612 & 0.4846 & 1.0230 & 1.0438 \\\\ 3.5000 & 3.4490 & 4.0460 & 4.1120 & 0.4540 & 0.4820 & 1.0700 & 1.0960 \\\\ 1.1350 & 0.9855 & 0.3970 & 0.6120 & 4.1420 & 3.9730 & 3.4550 & 3.4280 \\\\ 1.0940 & 0.9454 & 0.3911 & 0.6037 & 4.1724 & 4.0052 & 3.5160 & 3.4926 \\\\ 0.6600 & 0.5600 & 1.1100 & 1.2260 & 3.5680 & 3.4980 & 3.9700 & 4.0420 \\\\ 0.6470 & 0.5477 & 1.1093 & 1.2241 & 3.5292 & 3.4606 & 3.9430 & 4.0158 \\\\ 5.0400 & 4.9440 & 4.9560 & 5.0920 & 4.5240 & 4.4620 & 4.5100 & 4.5060 \\end{bmatrix}$\n",
+        "${\\bf W} @ {\\bf M}^\\top + bias = \\begin{bmatrix}\n",
+        "4.1190 & 4.0189 & 3.4776 & 3.6422 & 1.1224 & 1.0522 & 0.6510 & 0.5776 \\\\\n",
+        "4.0740 & 3.9754 & 3.4911 & 3.6517 & 1.1964 & 1.1292 & 0.7760 & 0.7086 \\\\\n",
+        "3.5270 & 3.4737 & 4.0133 & 4.0841 & 0.4612 & 0.4846 & 1.0230 & 1.0438 \\\\\n",
+        "3.5000 & 3.4490 & 4.0460 & 4.1120 & 0.4540 & 0.4820 & 1.0700 & 1.0960 \\\\\n",
+        "1.1350 & 0.9855 & 0.3970 & 0.6120 & 4.1420 & 3.9730 & 3.4550 & 3.4280 \\\\\n",
+        "1.0940 & 0.9454 & 0.3911 & 0.6037 & 4.1724 & 4.0052 & 3.5160 & 3.4926 \\\\\n",
+        "0.6600 & 0.5600 & 1.1100 & 1.2260 & 3.5680 & 3.4980 & 3.9700 & 4.0420 \\\\\n",
+        "0.6470 & 0.5477 & 1.1093 & 1.2241 & 3.5292 & 3.4606 & 3.9430 & 4.0158 \\\\\n",
+        "5.0400 & 4.9440 & 4.9560 & 5.0920 & 4.5240 & 4.4620 & 4.5100 & 4.5060\n",
+        "\\end{bmatrix}$\n",
         "\n",
         "`-` ${\\bf W} @ {\\bf M}^\\top + bias$ 의 (1,1)의 원소값을 계산해보면\n",
         "아래와 같다.\n",
@@ -516,7 +572,7 @@
         "\n",
         "`-` 주어진 자료와 우리가 임의로 만든 궁합매트릭스를 비교해보자."
       ],
-      "id": "573f9ec2-9140-4a96-80ea-94a5e438dba7"
+      "id": "bb62e000-52c3-4098-96a7-ec9293de0857"
     },
     {
       "cell_type": "code",
@@ -636,7 +692,7 @@
         "\n",
         "[6] 1.21+1.11 = 2.32"
       ],
-      "id": "77bd4e00-0d56-47fa-ad4e-a4e0084cfe6a"
+      "id": "d59bd24f-1b8b-4206-bc26-67085a8aa355"
     },
     {
       "cell_type": "code",
@@ -657,7 +713,7 @@
       "source": [
         "`-` 이름을 숫자화"
       ],
-      "id": "fd4106b8-4c4d-4c27-b4a2-1ded92c7897f"
+      "id": "b1c8e855-358f-4c21-849b-fbc499a7a6fd"
     },
     {
       "cell_type": "code",
@@ -692,7 +748,7 @@
       "source": [
         "`-` 텐서화 + one_hot-인코딩"
       ],
-      "id": "2dd6a960-ea98-4225-972b-4a3053907343"
+      "id": "76f53106-7272-450f-8b38-cf44dc50f4e1"
     },
     {
       "cell_type": "code",
@@ -744,7 +800,7 @@
         "`-` `X1` -\\> `여성특징`, `X1` -\\> `여성bias`, `X2` -\\> `남성특징`, `X2`\n",
         "-\\> `남성bias` 구현"
       ],
-      "id": "a9bbfa86-23d3-4068-9e81-0ee215211891"
+      "id": "50c26c66-90ab-41d6-b72b-21d5b5f10b8b"
     },
     {
       "cell_type": "code",
@@ -769,7 +825,7 @@
         "\n",
         "`-` step1: yhat을 구하자."
       ],
-      "id": "424634fa-c8a2-4120-99ca-88f1f55f0608"
+      "id": "56d7c93e-f8c9-46b9-b979-63971c8d0bf8"
     },
     {
       "cell_type": "code",
@@ -811,7 +867,7 @@
       "source": [
         "`-` step2: 손실계산"
       ],
-      "id": "58edb662-ada7-48fb-88d1-5b392f478f4b"
+      "id": "6af18409-4fe7-4476-8a1d-dd9eae3d2ef5"
     },
     {
       "cell_type": "code",
@@ -834,7 +890,7 @@
         "\n",
         "(미분전)"
       ],
-      "id": "68dfa651-f8b8-4c88-b72c-3758752a44f3"
+      "id": "075180e6-6c40-4bbd-bb2f-247f2af81a62"
     },
     {
       "cell_type": "code",
@@ -866,7 +922,7 @@
       "source": [
         "(미분)"
       ],
-      "id": "28be0792-b400-43b9-b768-33d83fad2260"
+      "id": "c96d0a88-61c1-45d2-a9b3-584646455df6"
     },
     {
       "cell_type": "code",
@@ -886,7 +942,7 @@
       "source": [
         "(미분후)"
       ],
-      "id": "0668a551-f86e-450a-a928-769d3917cbcd"
+      "id": "e6923bac-5721-46bc-802d-7dd88c125fbb"
     },
     {
       "cell_type": "code",
@@ -920,7 +976,7 @@
         "\n",
         "(옵티마이저 선언)"
       ],
-      "id": "9679ac7f-63e4-4db0-be61-553596fb90a8"
+      "id": "97b8b0c1-c895-42c0-aba6-2f1a48fec7cc"
     },
     {
       "cell_type": "code",
@@ -941,7 +997,7 @@
       "source": [
         "(update전)"
       ],
-      "id": "718c832e-78ab-4d73-9ffd-6d892a8d4219"
+      "id": "460dd600-638f-4dbf-b46f-6bd564b35884"
     },
     {
       "cell_type": "code",
@@ -973,7 +1029,7 @@
       "source": [
         "(update)"
       ],
-      "id": "1e95928a-b833-4599-8c0a-865788a043d8"
+      "id": "17d8ecb9-e465-44c4-893d-34792c81ff2a"
     },
     {
       "cell_type": "code",
@@ -993,7 +1049,7 @@
       "source": [
         "(update후)"
       ],
-      "id": "1eca4c22-ba89-4d99-a610-edab0e198eb9"
+      "id": "8310cfc8-509e-4a6f-bd53-6c2d9218c60b"
     },
     {
       "cell_type": "code",
@@ -1025,7 +1081,7 @@
       "source": [
         "(zero_grad)"
       ],
-      "id": "df57d5a3-40d1-447f-a6e0-bef79f23ee76"
+      "id": "ab15e029-9fd7-4cfe-a678-d915bf99e27e"
     },
     {
       "cell_type": "code",
@@ -1045,7 +1101,7 @@
       "source": [
         "(zero_grad후)"
       ],
-      "id": "37997f5b-4102-4802-946c-46a8ab48b5c4"
+      "id": "b4f95d72-a0de-44c0-9f74-bde92a393de6"
     },
     {
       "cell_type": "code",
@@ -1077,7 +1133,7 @@
       "source": [
         "## E. 코드정리"
       ],
-      "id": "29149651-6ab4-470c-a384-b1433442b69d"
+      "id": "51c2912c-715e-4180-b319-55bd2dcd2ad5"
     },
     {
       "cell_type": "code",
@@ -1143,7 +1199,7 @@
       "source": [
         "## F. 모형의 해석 – 쉬운경우"
       ],
-      "id": "ebb93812-f951-47ff-9f27-9f620a99db5f"
+      "id": "96cce93e-71cd-4f85-87a1-96e469ce449c"
     },
     {
       "cell_type": "code",
@@ -1180,7 +1236,7 @@
         "\n",
         "`-` 적합을 시켜보자."
       ],
-      "id": "141f999f-cef3-48ec-b534-e20b007926f7"
+      "id": "8c7edb8e-72f4-408f-b8df-884472101a86"
     },
     {
       "cell_type": "code",
@@ -1234,7 +1290,7 @@
       "source": [
         "`-` 잘 맞추는듯"
       ],
-      "id": "f9edec36-4975-43a6-8ad6-891c64262033"
+      "id": "82e03886-ba71-476d-9bf3-8da4dd0da3b2"
     },
     {
       "cell_type": "code",
@@ -1254,7 +1310,7 @@
       "source": [
         "`-` 해석을 해보자."
       ],
-      "id": "a8a36118-2e34-46fc-b86c-882d113821d7"
+      "id": "b0a0cd07-b913-4d0e-a592-ae1debdab733"
     },
     {
       "cell_type": "code",
@@ -1294,7 +1350,7 @@
         "-   궁합2: (IN, IN) = 1.4 // (IN, IS) = 0.4 // (IN, EN) = -0.4 // (IN,\n",
         "    ES) = -1.4"
       ],
-      "id": "61cf6aed-148a-4e7b-a6df-8008c4b372a2"
+      "id": "1644a4e2-43f3-447f-a2d8-351970d90eec"
     },
     {
       "cell_type": "code",
@@ -1318,7 +1374,7 @@
         "\n",
         "아래의 코드를 활용하여 net를 적합시켜라."
       ],
-      "id": "0f1bac61-9ca2-4554-8043-7d4758bf0efd"
+      "id": "ed56e2ae-2578-49fc-b900-368ffe27ee4a"
     },
     {
       "cell_type": "code",
@@ -1372,7 +1428,7 @@
       "source": [
         "적합된 네트워크를 바탕으로 아래의 값에 대한 예측을 수행하라."
       ],
-      "id": "1b08f6eb-0855-4d46-ac9f-5bd5684409f7"
+      "id": "51b33eab-5e85-4004-b050-bbe1d8065060"
     },
     {
       "cell_type": "code",
@@ -1393,7 +1449,7 @@
       "source": [
         "**hint** 답은 아래와 같다."
       ],
-      "id": "dd04c36a-c2d8-40b8-9bd5-d5570b718877"
+      "id": "94ce5de7-ad2d-4aa9-a55a-e23a42ee059a"
     },
     {
       "cell_type": "code",
