--- a/docs/posts/13wk-1.out.ipynb
+++ b/docs/posts/13wk-1.out.ipynb
@@ -13,11 +13,11 @@
         "\n",
         "# 2. Import"
       ],
-      "id": "c2e402d7-ea7c-4013-b5fd-24358121d1fa"
+      "id": "df64deb3-db13-456f-bb3f-3c90006df153"
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 4,
       "metadata": {
         "tags": []
       },
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 5,
       "metadata": {
         "tags": []
       },
@@ -49,11 +49,11 @@
       "source": [
         "# 3. Data – `abcabC`"
       ],
-      "id": "0a38cc67-2d8b-49e6-9d1e-c3d9a543c2f1"
+      "id": "3b6a086d-06ec-4ebe-9814-7b3b49e29efa"
     },
     {
       "cell_type": "code",
-      "execution_count": 354,
+      "execution_count": 6,
       "metadata": {
         "tags": []
       },
@@ -66,7 +66,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 355,
+      "execution_count": 7,
       "metadata": {
         "tags": []
       },
@@ -79,7 +79,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 356,
+      "execution_count": 8,
       "metadata": {
         "tags": []
       },
@@ -100,11 +100,11 @@
         "\n",
         "## A. `torch.nn.LSTMCell`"
       ],
-      "id": "8cab7066-7be4-4569-92e9-a38b8563cd9e"
+      "id": "2a160a86-bd1c-4a20-8f36-21e7426d63c1"
     },
     {
       "cell_type": "code",
-      "execution_count": 591,
+      "execution_count": 9,
       "metadata": {
         "tags": []
       },
@@ -120,13 +120,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 592,
+      "execution_count": 11,
       "metadata": {
         "tags": []
       },
       "outputs": [],
       "source": [
-        "T = len(x) \n",
+        "L = len(x) \n",
         "for epoc in range(1):\n",
         "    ht = torch.zeros(2)\n",
         "    ct = torch.zeros(2)\n",
@@ -148,7 +148,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 593,
+      "execution_count": 12,
       "metadata": {
         "tags": []
       },
@@ -166,13 +166,13 @@
         "\n",
         "### ***t=0 $\\to$ t=1***\n",
         "\n",
-        "`-` lstm_cell 을 이용한 계산 (결과비교용)"
+        "`-` `lstmcell`을 이용하여 $t=0 \\to t=1$을 구현해보자. (결과비교용)"
       ],
-      "id": "4208cf2d-e321-4cd9-b5c1-0d76680b8738"
+      "id": "e1aee265-d84d-4bef-b49d-66bf2d725987"
     },
     {
       "cell_type": "code",
-      "execution_count": 594,
+      "execution_count": 13,
       "metadata": {
         "tags": []
       },
@@ -188,7 +188,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 595,
+      "execution_count": 14,
       "metadata": {
         "tags": []
       },
@@ -216,7 +216,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 596,
+      "execution_count": 15,
       "metadata": {
         "tags": []
       },
@@ -235,11 +235,11 @@
         "\n",
         "`-` 직접계산"
       ],
-      "id": "47e54de9-7565-4574-802f-b5ab5dae8137"
+      "id": "94e49b10-4359-4046-9bd5-0258e64ed901"
     },
     {
       "cell_type": "code",
-      "execution_count": 597,
+      "execution_count": 16,
       "metadata": {
         "tags": []
       },
@@ -252,7 +252,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 598,
+      "execution_count": 17,
       "metadata": {
         "tags": []
       },
@@ -264,7 +264,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 599,
+      "execution_count": 18,
       "metadata": {
         "tags": []
       },
@@ -276,7 +276,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 600,
+      "execution_count": 19,
       "metadata": {
         "tags": []
       },
@@ -291,7 +291,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 601,
+      "execution_count": 20,
       "metadata": {
         "tags": []
       },
@@ -304,7 +304,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 602,
+      "execution_count": 21,
       "metadata": {
         "tags": []
       },
@@ -320,11 +320,11 @@
       "source": [
         "### ***t=0 $\\to$ t=T***"
       ],
-      "id": "57e3493f-3de6-4a02-8ee7-75b486a2e14b"
+      "id": "10dbf4c9-60b3-4e0d-92ce-f58ee701ec50"
     },
     {
       "cell_type": "code",
-      "execution_count": 603,
+      "execution_count": 22,
       "metadata": {
         "tags": []
       },
@@ -340,7 +340,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 604,
+      "execution_count": 23,
       "metadata": {
         "tags": []
       },
@@ -379,7 +379,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 605,
+      "execution_count": 24,
       "metadata": {
         "tags": []
       },
@@ -390,27 +390,16 @@
       "id": "d13701ce-03ea-45ec-b70d-b7f816d3a228"
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "(tensor([0.0533, 0.2075], grad_fn=<SqueezeBackward1>),\n",
-        " tensor([0.1218, 0.5590], grad_fn=<SqueezeBackward1>))"
-      ],
-      "id": "cf4d28e7-f4e5-4917-87be-40c4074b61dc"
-    },
-    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## C. epoch ver3 (with torch.nn.LSTM)"
+        "## C. `torch.nn.LSTM`"
       ],
-      "id": "a8d72c88-fb3b-4ac0-b2d5-2efb898eddd4"
+      "id": "d5f7ca21-441b-4544-85db-950f812ffdfb"
     },
     {
       "cell_type": "code",
-      "execution_count": 606,
+      "execution_count": 25,
       "metadata": {
         "tags": []
       },
@@ -424,7 +413,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 607,
+      "execution_count": 26,
       "metadata": {
         "tags": []
       },
@@ -436,7 +425,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 608,
+      "execution_count": 27,
       "metadata": {
         "tags": []
       },
@@ -451,7 +440,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 391,
+      "execution_count": 28,
       "metadata": {
         "tags": []
       },
@@ -464,7 +453,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 610,
+      "execution_count": 29,
       "metadata": {
         "tags": []
       },
@@ -487,7 +476,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 611,
+      "execution_count": 30,
       "metadata": {
         "tags": []
       },
@@ -507,11 +496,11 @@
         "\n",
         "`-` 적합"
       ],
-      "id": "4c047386-618e-4d15-83e0-71f5e99a1c7b"
+      "id": "6ccf1714-1d10-4617-93dd-4423d5c1f322"
     },
     {
       "cell_type": "code",
-      "execution_count": 526,
+      "execution_count": 31,
       "metadata": {
         "tags": []
       },
@@ -525,7 +514,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 527,
+      "execution_count": 32,
       "metadata": {
         "tags": []
       },
@@ -538,7 +527,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 528,
+      "execution_count": 33,
       "metadata": {
         "tags": []
       },
@@ -565,11 +554,11 @@
       "source": [
         "`-` 시각화"
       ],
-      "id": "7465685a-fbb7-4890-97c9-b410e9f58a59"
+      "id": "fc15ed18-60c9-44e6-88f6-94af103fa6e0"
     },
     {
       "cell_type": "code",
-      "execution_count": 529,
+      "execution_count": 34,
       "metadata": {
         "tags": []
       },
@@ -587,7 +576,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 540,
+      "execution_count": 35,
       "metadata": {
         "tags": []
       },
@@ -620,7 +609,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 547,
+      "execution_count": 36,
       "metadata": {
         "tags": []
       },
@@ -652,11 +641,11 @@
       "source": [
         "## B. 시각화1: $({\\boldsymbol g}_t, {\\boldsymbol c}_{t-1}) \\to {\\boldsymbol c}_{t}$"
       ],
-      "id": "cdab2bec-2ac0-4cc3-b3e4-87b38d0f8d4e"
+      "id": "5f99381a-9568-4007-99c6-4f0f77fae889"
     },
     {
       "cell_type": "code",
-      "execution_count": 542,
+      "execution_count": 37,
       "metadata": {
         "tags": []
       },
@@ -670,7 +659,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 543,
+      "execution_count": 38,
       "metadata": {
         "tags": []
       },
@@ -716,11 +705,11 @@
         "\n",
         "## C. 시각화2: ${\\boldsymbol g}_t \\to {\\boldsymbol h}_{t}$"
       ],
-      "id": "ab5b478f-5716-4d6c-9356-b47a3a7eddae"
+      "id": "4834226e-54d1-421e-baf8-5e3f47f1767a"
     },
     {
       "cell_type": "code",
-      "execution_count": 549,
+      "execution_count": 39,
       "metadata": {
         "tags": []
       },
@@ -732,7 +721,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 556,
+      "execution_count": 40,
       "metadata": {
         "tags": []
       },
@@ -767,9 +756,9 @@
         "\n",
         "**(step1)** calculate ${\\tt ifgo}$\n",
         "\n",
-        "${\\tt ifgo} = {\\boldsymbol x}_t \\big[{\\bf W}_{ii} | {\\bf W}_{if}| {\\bf W}_{ig} |{\\bf W}_{io}\\big] + {\\boldsymbol h}_{t-1} \\big[ {\\bf W}_{hi}|{\\bf W}_{hf} |{\\bf W}_{hg} | {\\bf W}_{ho} \\big] + bias$\n",
+        "${\\tt ifgo} = {\\boldsymbol x}_t  \\big[{\\bf W}_{ii} | {\\bf W}_{if}| {\\bf W}_{ig} |{\\bf W}_{io}\\big] + {\\boldsymbol h}_{t-1}  \\big[ {\\bf W}_{hi}|{\\bf W}_{hf} |{\\bf W}_{hg} | {\\bf W}_{ho} \\big] + bias$\n",
         "\n",
-        "$=\\big[{\\boldsymbol x}_t{\\bf W}_{ii} + {\\boldsymbol h}_{t-1}{\\bf W}_{hi} ~\\big|~ {\\boldsymbol x}_t{\\bf W}_{if}+ {\\boldsymbol h}_{t-1}{\\bf W}_{hf}~ \\big|~ {\\boldsymbol x}_t{\\bf W}_{ig} + {\\boldsymbol h}_{t-1}{\\bf W}_{hg} ~\\big|~ {\\boldsymbol x}_t{\\bf W}_{io} + {\\boldsymbol h}_{t-1}{\\bf W}_{ho} \\big] + bias$\n",
+        "$=\\big[{\\boldsymbol x}_t{\\bf W}_{ii} + {\\boldsymbol h}_{t-1}{\\bf W}_{hi} ~\\big|~ {\\boldsymbol x}_t{\\bf W}_{if}+ {\\boldsymbol h}_{t-1}{\\bf W}_{hf}~ \\big|~ {\\boldsymbol x}_t{\\bf W}_{ig} + {\\boldsymbol h}_{t-1}{\\bf W}_{hg}  ~\\big|~ {\\boldsymbol x}_t{\\bf W}_{io} + {\\boldsymbol h}_{t-1}{\\bf W}_{ho} \\big] + bias$\n",
         "\n",
         "참고: 위의 수식은 아래코드에 해당하는 부분\n",
         "\n",
@@ -873,7 +862,7 @@
         "-   <https://pytorch.org/docs/stable/generated/torch.nn.LSTM.html>\n",
         "-   <https://arxiv.org/abs/1402.1128>"
       ],
-      "id": "b74c1f78-d606-4a1a-a81d-7905ddb1a9ee"
+      "id": "e342c332-1f3b-4c48-9a79-fca3067b89d6"
     }
   ],
   "nbformat": 4,
