--- a/docs/posts/13wk-1-lecture.out.ipynb
+++ b/docs/posts/13wk-1-lecture.out.ipynb
@@ -13,7 +13,7 @@
         "\n",
         "# 2. Import"
       ],
-      "id": "a909ebba-071a-43fa-a3bc-f2e074e4833c"
+      "id": "36b1b224-0e9f-4d80-8b6b-1cc8e8c1f03e"
     },
     {
       "cell_type": "code",
@@ -49,7 +49,7 @@
       "source": [
         "# 3. Data – `abcabC`"
       ],
-      "id": "57337ee3-0d4b-42e0-8feb-05b065ca8ba5"
+      "id": "df1ded21-93fe-4c84-bebd-263bc21828eb"
     },
     {
       "cell_type": "code",
@@ -98,481 +98,32 @@
       "source": [
         "# 4. LSTM의 계산과정 재현\n",
         "\n",
-        "## A. `torch.nn.LSTMCell`"
-      ],
-      "id": "fdc75c68-4ba9-48cf-9068-1a5c4ff3dbeb"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 9,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "torch.manual_seed(43052) \n",
-        "lstmcell = torch.nn.LSTMCell(4,2) \n",
-        "cook = torch.nn.Linear(2,4)\n",
-        "loss_fn = torch.nn.CrossEntropyLoss() \n",
-        "optimizr = torch.optim.Adam(list(lstmcell.parameters())+list(cook.parameters()),lr=0.1)"
-      ],
-      "id": "3ee83a6c-4e7f-4c70-9a87-9b6c824abaf9"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 11,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "L = len(x) \n",
-        "for epoc in range(1):\n",
-        "    ht = torch.zeros(2)\n",
-        "    ct = torch.zeros(2)\n",
-        "    loss = 0 \n",
-        "    ## 1~2\n",
-        "    for t in range(L):\n",
-        "        Xt,yt = X[t], y[t]\n",
-        "        ht,ct = lstmcell(Xt,(ht,ct))\n",
-        "        ot = cook(ht) \n",
-        "        loss = loss + loss_fn(ot,yt)\n",
-        "    loss = loss / T\n",
-        "    ## 3 \n",
-        "    loss.backward()\n",
-        "    ## 4 \n",
-        "    optimizr.step()\n",
-        "    optimizr.zero_grad()"
-      ],
-      "id": "73a1b4a0-644e-463e-abd1-46ee676cdd33"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 12,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "ht,ct "
-      ],
-      "id": "b21e6c50-233c-497d-99b7-b8a9601a0781"
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
+        "## A. `torch.nn.LSTMCell`\n",
+        "\n",
         "## B. 직접구현\n",
         "\n",
-        "### ***t=0 $\\to$ t=1***\n",
+        "### `#` ***t=0 $\\to$ t=1***\n",
         "\n",
-        "`-` `lstmcell`을 이용하여 $t=0 \\to t=1$을 구현해보자. (결과비교용)"
-      ],
-      "id": "52967083-4d79-442a-bbd9-d79e68832fc9"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 13,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "torch.manual_seed(43052) \n",
-        "lstmcell = torch.nn.LSTMCell(4,2) \n",
-        "cook = torch.nn.Linear(2,4)\n",
-        "loss_fn = torch.nn.CrossEntropyLoss() \n",
-        "optimizr = torch.optim.Adam(list(lstmcell.parameters())+list(cook.parameters()),lr=0.1)"
-      ],
-      "id": "ca79e937-34cd-4c2e-933b-df07108a7e46"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 14,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "L = len(x) \n",
-        "for epoc in range(1):\n",
-        "    ht = torch.zeros(2)\n",
-        "    ct = torch.zeros(2)\n",
-        "    loss = 0 \n",
-        "    ## 1~2\n",
-        "    for t in range(1):\n",
-        "        Xt,yt = X[t], y[t]\n",
-        "        ht,ct = lstmcell(Xt,(ht,ct))\n",
-        "        ot = cook(ht) \n",
-        "        loss = loss + loss_fn(ot,yt)\n",
-        "    loss = loss / T\n",
-        "    ## 3 \n",
-        "    loss.backward()\n",
-        "    ## 4 \n",
-        "    optimizr.step()\n",
-        "    optimizr.zero_grad()"
-      ],
-      "id": "98c2dc3b-3dd3-4cdf-b324-e005fc46d91c"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 15,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "ht,ct "
-      ],
-      "id": "b193e6e0-ef11-4b74-9363-b59fd7255107"
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
+        "`-` `lstmcell`을 이용하여 $t=0 \\to t=1$을 구현해보자. (결과비교용)\n",
+        "\n",
         "-   이런결과를 어떻게 만드는걸까?\n",
         "-   <https://pytorch.org/docs/stable/generated/torch.nn.LSTM.html>\n",
         "\n",
-        "`-` 직접계산"
-      ],
-      "id": "fd71afec-cd97-48c1-a9fb-724c26af5431"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 16,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "ht = torch.zeros(2)\n",
-        "ct = torch.zeros(2)"
-      ],
-      "id": "9da8b17a-2a8a-4939-805e-9db848ffd3f6"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 17,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "ifgo = Xt @ lstmcell.weight_ih.T + ht @ lstmcell.weight_hh.T + lstmcell.bias_ih + lstmcell.bias_hh"
-      ],
-      "id": "106ead13-7493-433d-89a3-b81811356c31"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 18,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "ifgo"
-      ],
-      "id": "0aaa120e-3c08-417d-948b-13671d27cae2"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 19,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "input_gate = sig(ifgo[0:2])\n",
-        "forget_gate = sig(ifgo[2:4])\n",
-        "gt = tanh(ifgo[4:6])\n",
-        "output_gate = sig(ifgo[6:8])"
-      ],
-      "id": "470a9854-f64e-478d-8360-8eb67ca43663"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 20,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "ct = forget_gate * ct + input_gate * gt\n",
-        "ht = output_gate * tanh(ct)"
-      ],
-      "id": "a527c607-7881-4839-8f8d-4509e0a9a866"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 21,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "ht,ct"
-      ],
-      "id": "96ce65b6-8f12-4769-a6c6-b14a69d1dac2"
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "### ***t=0 $\\to$ t=T***"
-      ],
-      "id": "7f0e1601-aa41-4053-86dc-cea0330a690c"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 22,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "torch.manual_seed(43052) \n",
-        "lstmcell = torch.nn.LSTMCell(4,2) \n",
-        "cook = torch.nn.Linear(2,4)\n",
-        "loss_fn = torch.nn.CrossEntropyLoss() \n",
-        "optimizr = torch.optim.Adam(list(lstmcell.parameters())+list(cook.parameters()),lr=0.1)"
-      ],
-      "id": "e7838cb2-3a22-4b28-b4bf-38ea0dc6c515"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 23,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "L = len(X) \n",
-        "for epoc in range(1):\n",
-        "    ht = torch.zeros(2)\n",
-        "    ct = torch.zeros(2)\n",
-        "    loss = 0 \n",
-        "    ## 1~2\n",
-        "    for t in range(L):\n",
-        "        Xt,yt = X[t], y[t]\n",
-        "        #--#\n",
-        "        ## lstm_cell step1: calculate ifgo \n",
-        "        ifgo = Xt @ lstmcell.weight_ih.T + ht @ lstmcell.weight_hh.T + lstmcell.bias_ih + lstmcell.bias_hh\n",
-        "        ## lstm_cell step2: decompose ifgo \n",
-        "        input_gate = sig(ifgo[0:2])\n",
-        "        forget_gate = sig(ifgo[2:4])\n",
-        "        gt = tanh(ifgo[4:6])\n",
-        "        output_gate = sig(ifgo[6:8])\n",
-        "        ## lstm_cell step3: calculate ht,ct \n",
-        "        ct = forget_gate * ct + input_gate * gt\n",
-        "        ht = output_gate * tanh(ct)\n",
-        "        #--#    \n",
-        "        ot = cook(ht) \n",
-        "        loss = loss + loss_fn(ot,yt)\n",
-        "    loss = loss / T\n",
-        "    ## 3 \n",
-        "    loss.backward()\n",
-        "    ## 4 \n",
-        "    optimizr.step()\n",
-        "    optimizr.zero_grad()"
-      ],
-      "id": "baa1fbcb-ef5d-4b36-b9ef-6135344b2de4"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 24,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "ht,ct"
-      ],
-      "id": "d13701ce-03ea-45ec-b70d-b7f816d3a228"
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## C. `torch.nn.LSTM`"
-      ],
-      "id": "b71ad60b-9c4f-45a7-8c03-1bb3802169d1"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 25,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "torch.manual_seed(43052) \n",
-        "lstmcell = torch.nn.LSTMCell(4,2)\n",
-        "cook = torch.nn.Linear(2,4) "
-      ],
-      "id": "3cda7558-9132-41ba-b445-86413b517609"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 26,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "lstm = torch.nn.LSTM(4,2) "
-      ],
-      "id": "0cead8bf-4892-482b-aac4-59f9dc8e9bee"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 27,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "lstm.weight_hh_l0.data = lstmcell.weight_hh.data \n",
-        "lstm.bias_hh_l0.data = lstmcell.bias_hh.data \n",
-        "lstm.weight_ih_l0.data = lstmcell.weight_ih.data \n",
-        "lstm.bias_ih_l0.data = lstmcell.bias_ih.data "
-      ],
-      "id": "d6032b0d-2620-421c-8d7f-a96781bc5cca"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 28,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "loss_fn = torch.nn.CrossEntropyLoss()\n",
-        "optimizr = torch.optim.Adam(list(lstm.parameters()) + list(cook.parameters()), lr=0.1) "
-      ],
-      "id": "368458a1-9147-41f2-9416-0ae157cbba28"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 29,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "Water = torch.zeros(1,2) \n",
-        "for epoc in range(1): \n",
-        "    ## step1 \n",
-        "    h, (ht,ct) = lstm(X,(Water,Water))\n",
-        "    netout = cook(h)\n",
-        "    ## step2\n",
-        "    loss = loss_fn(netout,y) \n",
-        "    ## step3\n",
-        "    loss.backward()\n",
-        "    ## step4 \n",
-        "    optimizr.step()\n",
-        "    optimizr.zero_grad() "
-      ],
-      "id": "1a6e1c71-cf26-4343-b75c-48de428f7902"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 30,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "ht,ct"
-      ],
-      "id": "7876e8be-6e9f-4454-a387-292df4625930"
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
+        "`-` 직접계산\n",
+        "\n",
+        "### `#` ***t=0 $\\to$ t=T***\n",
+        "\n",
+        "## C. `torch.nn.LSTM`\n",
+        "\n",
         "# 5. LSTM은 왜 강한가?\n",
         "\n",
         "## A. 적합 및 시각화\n",
         "\n",
-        "`-` 적합"
-      ],
-      "id": "38ded324-a779-4a3e-ae8f-98ccc45d237b"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 31,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "torch.manual_seed(0)\n",
-        "lstm = torch.nn.LSTM(4,2)\n",
-        "cook = torch.nn.Linear(2,4)"
-      ],
-      "id": "40e55dd1-58ea-441b-9075-80fd9a2ccc17"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 32,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "loss_fn = torch.nn.CrossEntropyLoss() \n",
-        "optimizr = torch.optim.Adam(list(lstm.parameters())+ list(cook.parameters()),lr=0.1)"
-      ],
-      "id": "76ebedf9-46f0-42ee-85bd-b4c7dd157db5"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 33,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "Water = torch.zeros(1,2) \n",
-        "for epoc in range(200): \n",
-        "    ## step1 \n",
-        "    h, (ht,ct) = lstm(X,(Water,Water))\n",
-        "    netout = cook(h)\n",
-        "    ## step2\n",
-        "    loss = loss_fn(netout,y) \n",
-        "    ## step3\n",
-        "    loss.backward()\n",
-        "    ## step4 \n",
-        "    optimizr.step()\n",
-        "    optimizr.zero_grad() "
-      ],
-      "id": "402730b9-dce8-465e-bad9-6026cd4287b1"
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
+        "`-` 적합\n",
+        "\n",
         "`-` 시각화"
       ],
-      "id": "b9a77fd2-73b7-4e25-9ba6-7258fb3ebc7b"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 34,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "L = len(x)\n",
-        "input_gate = torch.zeros(L,2)\n",
-        "forget_gate = torch.zeros(L,2)\n",
-        "output_gate = torch.zeros(L,2)\n",
-        "g = torch.zeros(L,2)\n",
-        "cell = torch.zeros(L,2)\n",
-        "h = torch.zeros(L,2) "
-      ],
-      "id": "509c6483-aaf5-45a5-8704-b2b396456ff5"
+      "id": "8e0ba030-fa8a-48c4-af45-f24f639173a5"
     },
     {
       "cell_type": "code",
@@ -583,6 +134,13 @@
       "outputs": [],
       "source": [
         "# 중간에 숨겨진 층들을 시각화 하기 위한 도구\n",
+        "L = len(x)\n",
+        "input_gate = torch.zeros(L,2)\n",
+        "forget_gate = torch.zeros(L,2)\n",
+        "output_gate = torch.zeros(L,2)\n",
+        "g = torch.zeros(L,2)\n",
+        "cell = torch.zeros(L,2)\n",
+        "h = torch.zeros(L,2) \n",
         "## t=0\n",
         "water = torch.zeros(2)\n",
         "ifgo = X[0] @ lstm.weight_ih_l0.T + water @ lstm.weight_hh_l0.T + lstm.bias_ih_l0 + lstm.bias_hh_l0 \n",
@@ -641,7 +199,7 @@
       "source": [
         "## B. 시각화1: $({\\boldsymbol g}_t, {\\boldsymbol c}_{t-1}) \\to {\\boldsymbol c}_{t}$"
       ],
-      "id": "5c1b9134-2010-4879-b08d-a57739353bdc"
+      "id": "22c36dc8-2b03-48e0-958f-687d392c35fc"
     },
     {
       "cell_type": "code",
@@ -705,7 +263,7 @@
         "\n",
         "## C. 시각화2: ${\\boldsymbol g}_t \\to {\\boldsymbol h}_{t}$"
       ],
-      "id": "06f427f4-999d-4b00-8e4a-88d586895a36"
+      "id": "49ed6592-ce7e-4b9f-a821-83485d0072c3"
     },
     {
       "cell_type": "code",
@@ -862,7 +420,7 @@
         "-   <https://pytorch.org/docs/stable/generated/torch.nn.LSTM.html>\n",
         "-   <https://arxiv.org/abs/1402.1128>"
       ],
-      "id": "e285bba2-080b-4ea2-ba9e-44d71418fabc"
+      "id": "68a16740-ec9b-4343-bf7c-ff6aa5b5891d"
     }
   ],
   "nbformat": 4,
