--- a/docs/posts/13wk-1.out.ipynb
+++ b/docs/posts/13wk-1.out.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# 13wk-1: 순환신경망 (4) LSTM의 계산과정 재현, LSTM은 왜 강한가?\n",
+        "# 13wk-1: 순환신경망 (4) – LSTM 계산과정 재현, LSTM은 왜 강한가?\n",
         "\n",
         "최규빈  \n",
         "2024-05-27\n",
@@ -13,7 +13,7 @@
         "\n",
         "# 2. Import"
       ],
-      "id": "586b1f43-26b0-40c0-aef0-40ca8350c8fa"
+      "id": "29d19e64-08b2-43ab-955d-be950b2a9960"
     },
     {
       "cell_type": "code",
@@ -49,7 +49,7 @@
       "source": [
         "# 3. Data – `abcabC`"
       ],
-      "id": "c06f3ebe-5fde-4f10-815d-af25d3b28bb2"
+      "id": "aa246382-bbc6-4e5d-92db-1862b224bb78"
     },
     {
       "cell_type": "code",
@@ -96,11 +96,11 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# 4. LSTM의 계산과정 재현\n",
+        "# 4. LSTM 계산과정 재현\n",
         "\n",
         "## A. `torch.nn.LSTMCell`"
       ],
-      "id": "6549bce2-9276-4483-879a-537538950e9d"
+      "id": "1949a350-592d-451b-ade0-ad92be0f93bd"
     },
     {
       "cell_type": "code",
@@ -158,7 +158,7 @@
         "\n",
         "`-` `lstmcell`을 이용하여 $t=0 \\to t=1$을 구현해보자. (결과비교용)"
       ],
-      "id": "e2792c29-f8ea-4818-8119-dd4582b646ca"
+      "id": "66bca7f0-abed-4b28-a681-9d3dc06e478b"
     },
     {
       "cell_type": "code",
@@ -216,7 +216,7 @@
         "`-` 직접계산\n",
         "(${\\boldsymbol i}_t, {\\boldsymbol f}_t, {\\boldsymbol g}_t, {\\boldsymbol o}_t$)"
       ],
-      "id": "7b224095-38f0-43a4-bc80-02b2a7ba0ed5"
+      "id": "f502384c-3c7f-4568-9c9c-e99903dfabaa"
     },
     {
       "cell_type": "code",
@@ -299,7 +299,7 @@
       "source": [
         "그런데 아래와 같이 계산할수도 있음."
       ],
-      "id": "397afccc-822e-467c-87a6-5897f962a606"
+      "id": "d524a025-09a6-4d07-b4fa-09fa8b551f93"
     },
     {
       "cell_type": "code",
@@ -346,7 +346,7 @@
       "source": [
         "`-` 직접계산 (${\\boldsymbol c}_t, {\\boldsymbol h}_t$)"
       ],
-      "id": "7f93e375-d046-4cef-8936-e95da86865e1"
+      "id": "8fe89761-003c-46e1-a40f-98dab28d1ceb"
     },
     {
       "cell_type": "code",
@@ -381,7 +381,7 @@
         "\n",
         "`-` `lstmcell`을 이용하여 구현해보자. (결과비교용)"
       ],
-      "id": "5137802a-5111-4763-8a64-bbcdd12db552"
+      "id": "c2092431-ec33-4a58-b8af-ac46be8e6a90"
     },
     {
       "cell_type": "code",
@@ -435,7 +435,7 @@
       "source": [
         "`-` 직접구현"
       ],
-      "id": "c9ed21bf-4bea-4e67-8f2c-6fe823a6af7e"
+      "id": "23c32766-095d-4718-83d1-bcc0f76ad04b"
     },
     {
       "cell_type": "code",
@@ -493,7 +493,7 @@
       "source": [
         "## C. `torch.nn.LSTM`"
       ],
-      "id": "839de7b9-9aa2-4320-99b9-83fe271b25bf"
+      "id": "ae3f8927-7768-4fd4-8ab8-1cb72adc9044"
     },
     {
       "cell_type": "code",
@@ -552,7 +552,7 @@
         "\n",
         "`-` 적합"
       ],
-      "id": "fdefa808-9c12-43ff-9c40-f32c7f3ad67d"
+      "id": "07faf318-404b-46df-901b-507a4d8fa7a9"
     },
     {
       "cell_type": "code",
@@ -589,7 +589,7 @@
       "source": [
         "`-` 시각화"
       ],
-      "id": "c23a566d-640b-4241-b4d7-fabec2e1d9ed"
+      "id": "0f06d37f-7c35-45de-9c31-b31d04080f59"
     },
     {
       "cell_type": "code",
@@ -667,7 +667,7 @@
       "source": [
         "## B. 시각화1: $({\\boldsymbol g}_t, {\\boldsymbol c}_{t-1}) \\to {\\boldsymbol c}_{t}$"
       ],
-      "id": "6721a179-1eae-4946-b3f4-14905ff4e260"
+      "id": "b403d278-8d17-4116-8342-3633307f4d1a"
     },
     {
       "cell_type": "code",
@@ -704,7 +704,7 @@
         "-   `matshow`로 시각화할때 `vmin=-1`, `vmax=1`로 설정해도\n",
         "    ${\\boldsymbol c}_t$를 표현함에 부족함이 없을듯"
       ],
-      "id": "4f0e1aad-cf6a-485c-8228-8d86032cc74a"
+      "id": "507d359d-fbca-4500-a4c8-c7687cac1720"
     },
     {
       "cell_type": "code",
@@ -757,7 +757,7 @@
         "\n",
         "## C. 시각화2: ${\\boldsymbol g}_t \\to {\\boldsymbol h}_{t}$"
       ],
-      "id": "89d0c012-6b29-4b8a-9a5a-bf7e2929d0a2"
+      "id": "0fa8f80e-e411-4738-905f-e8be377bbd69"
     },
     {
       "cell_type": "code",
@@ -914,7 +914,7 @@
         "-   <https://pytorch.org/docs/stable/generated/torch.nn.LSTM.html>\n",
         "-   <https://arxiv.org/abs/1402.1128>"
       ],
-      "id": "1fe99a78-bbf4-4d3c-a900-9d75d23c0b89"
+      "id": "7ce9a3c8-8e64-487d-9c94-612564d6e7fd"
     }
   ],
   "nbformat": 4,
