--- a/docs/posts/13wk-1.out.ipynb
+++ b/docs/posts/13wk-1.out.ipynb
@@ -9,11 +9,15 @@
         "최규빈  \n",
         "2024-05-27\n",
         "\n",
+        "<a href=\"https://colab.research.google.com/github/guebin/DL2024/blob/main/posts/13wk-1.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" style=\"text-align: left\"></a>\n",
+        "\n",
         "# 1. 강의영상\n",
+        "\n",
+        "<https://youtu.be/playlist?list=PLQqh36zP38-x9DomHaojnXVqjdb0nqd_c&si=sh8nkPmHQb9ofrrL>\n",
         "\n",
         "# 2. Import"
       ],
-      "id": "29d19e64-08b2-43ab-955d-be950b2a9960"
+      "id": "eeedfb3e-8415-4502-949f-53d112deb63d"
     },
     {
       "cell_type": "code",
@@ -49,7 +53,7 @@
       "source": [
         "# 3. Data – `abcabC`"
       ],
-      "id": "aa246382-bbc6-4e5d-92db-1862b224bb78"
+      "id": "ab34f69c-7070-478c-99da-bc86f1946bfc"
     },
     {
       "cell_type": "code",
@@ -100,7 +104,7 @@
         "\n",
         "## A. `torch.nn.LSTMCell`"
       ],
-      "id": "1949a350-592d-451b-ade0-ad92be0f93bd"
+      "id": "8cfaac74-f699-4aa8-94af-e2d80242d0ca"
     },
     {
       "cell_type": "code",
@@ -158,7 +162,7 @@
         "\n",
         "`-` `lstmcell`을 이용하여 $t=0 \\to t=1$을 구현해보자. (결과비교용)"
       ],
-      "id": "66bca7f0-abed-4b28-a681-9d3dc06e478b"
+      "id": "6219ddef-3256-4651-99ad-c1ba9b46ae22"
     },
     {
       "cell_type": "code",
@@ -216,7 +220,7 @@
         "`-` 직접계산\n",
         "(${\\boldsymbol i}_t, {\\boldsymbol f}_t, {\\boldsymbol g}_t, {\\boldsymbol o}_t$)"
       ],
-      "id": "f502384c-3c7f-4568-9c9c-e99903dfabaa"
+      "id": "c38fd502-5fc9-4b22-96b1-6692a13f07c3"
     },
     {
       "cell_type": "code",
@@ -299,7 +303,7 @@
       "source": [
         "그런데 아래와 같이 계산할수도 있음."
       ],
-      "id": "d524a025-09a6-4d07-b4fa-09fa8b551f93"
+      "id": "7a33c5dc-4b78-4e66-bfad-42dbcdfc31ab"
     },
     {
       "cell_type": "code",
@@ -346,7 +350,7 @@
       "source": [
         "`-` 직접계산 (${\\boldsymbol c}_t, {\\boldsymbol h}_t$)"
       ],
-      "id": "8fe89761-003c-46e1-a40f-98dab28d1ceb"
+      "id": "b0939321-07a2-4aef-8c1e-ca15e89ff2c1"
     },
     {
       "cell_type": "code",
@@ -381,7 +385,7 @@
         "\n",
         "`-` `lstmcell`을 이용하여 구현해보자. (결과비교용)"
       ],
-      "id": "c2092431-ec33-4a58-b8af-ac46be8e6a90"
+      "id": "a59b5780-8109-4c68-b20c-6456ce5af7f9"
     },
     {
       "cell_type": "code",
@@ -435,7 +439,7 @@
       "source": [
         "`-` 직접구현"
       ],
-      "id": "23c32766-095d-4718-83d1-bcc0f76ad04b"
+      "id": "a501494d-4537-45c5-ba41-fe9e76fe1b60"
     },
     {
       "cell_type": "code",
@@ -493,7 +497,7 @@
       "source": [
         "## C. `torch.nn.LSTM`"
       ],
-      "id": "ae3f8927-7768-4fd4-8ab8-1cb72adc9044"
+      "id": "2c7c9483-2b55-48ca-a4e0-f655b37c47a5"
     },
     {
       "cell_type": "code",
@@ -552,7 +556,7 @@
         "\n",
         "`-` 적합"
       ],
-      "id": "07faf318-404b-46df-901b-507a4d8fa7a9"
+      "id": "1d1fa2a4-1773-4f14-bd53-f6e011c5649a"
     },
     {
       "cell_type": "code",
@@ -589,7 +593,7 @@
       "source": [
         "`-` 시각화"
       ],
-      "id": "0f06d37f-7c35-45de-9c31-b31d04080f59"
+      "id": "3a6f0598-9dec-4ff0-b5f2-53ba7e2b9a27"
     },
     {
       "cell_type": "code",
@@ -667,7 +671,7 @@
       "source": [
         "## B. 시각화1: $({\\boldsymbol g}_t, {\\boldsymbol c}_{t-1}) \\to {\\boldsymbol c}_{t}$"
       ],
-      "id": "b403d278-8d17-4116-8342-3633307f4d1a"
+      "id": "c9878a3a-4e80-4f13-ab89-02607d87bc2d"
     },
     {
       "cell_type": "code",
@@ -704,7 +708,7 @@
         "-   `matshow`로 시각화할때 `vmin=-1`, `vmax=1`로 설정해도\n",
         "    ${\\boldsymbol c}_t$를 표현함에 부족함이 없을듯"
       ],
-      "id": "507d359d-fbca-4500-a4c8-c7687cac1720"
+      "id": "9d015ec2-98ea-43a0-8d7a-23776cdab9ff"
     },
     {
       "cell_type": "code",
@@ -757,7 +761,7 @@
         "\n",
         "## C. 시각화2: ${\\boldsymbol g}_t \\to {\\boldsymbol h}_{t}$"
       ],
-      "id": "0fa8f80e-e411-4738-905f-e8be377bbd69"
+      "id": "21f6d116-2e93-408c-bcf1-3ad666111b9c"
     },
     {
       "cell_type": "code",
@@ -914,7 +918,7 @@
         "-   <https://pytorch.org/docs/stable/generated/torch.nn.LSTM.html>\n",
         "-   <https://arxiv.org/abs/1402.1128>"
       ],
-      "id": "7ce9a3c8-8e64-487d-9c94-612564d6e7fd"
+      "id": "40751d9e-b68c-41d8-ad12-7b70c4c3ca24"
     }
   ],
   "nbformat": 4,
